# dstl

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  mkdocs.yml  pyproject.toml
docs/: index.md  release-notes.md
docs/api/: translate.md
docs/api/types/: example.md
docs/overrides/: main.html
dstl/: __init__.py  translate.py  types.py
dstl/cli/: __init__.py  translate.py
dstl/prodigy/: recipes.py
dstl/translate/: __init__.py  azure.py  base.py  core.py  google.py  registry.py  transformers.py
examples/data/skills/: small_test.jsonl
examples/fixed_data/skills/: small_test_translated.jsonl
scripts/: format-imports.sh  format.sh  lint.sh  push-tag.sh  test.sh  use_jupyter.sh
tests/: test_translate.py
